Подогнал главную страницу Планшет

--- a/source/index.html
+++ b/source/index.html
@@ -27,7 +27,7 @@
           </ul>
           <ul class="main-nav__list main-nav__list--opened main-nav__list--sub-nav">
             <li class="main-nav__item">
-              <a class="main-nav__name" href="#">Поиск по сайту</a>
+              <a class="main-nav__name visually-hidden" href="#">Поиск по сайту</a>
             </li>
             <li class="main-nav__item">
               <a class="main-nav__name" href="#">Корзина: пока пуста</a>
@@ -86,7 +86,7 @@
                 <img src="/img/triple-set-mobile@1x.jpg" alt="Вязаные корзинки" width="260" height="315">
               </div>
               <div class="hit-product__order">
-                <p class="hit-product__order-price">Цена: 990 руб</p>
+                <p class="hit-product__order-price">Цена: 990 руб.</p>
                 <a class="hit-product__make-order btn" href="#">Заказать</a>
               </div>
           </div>
@@ -147,7 +147,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__logo logo hidden">
-          <a class="logo__link">
+          <a class="page-footer__logo-link">
             <img class="logo__img" src="/img/logo-mobile.svg" width="86" height="35" alt="Мишка">
           </a>
         </div>
