Подогнал каталог Планшет

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,7 +27,7 @@
           </ul>
           <ul class="main-nav__list main-nav__list--opened main-nav__list--sub-nav">
             <li class="main-nav__item">
-              <a class="main-nav__name" href="#">Поиск по сайту</a>
+              <a class="main-nav__name visually-hidden" href="#">Поиск по сайту</a>
             </li>
             <li class="main-nav__item">
               <a class="main-nav__name" href="#">Корзина: пока пуста</a>
@@ -60,7 +60,7 @@
             <p class="catalog__specs">Рост 30 см, вес 200 г</p>
             <div class="catalog__order">
               <p class="catalog__price">1 200 руб.</p>
-              <a class="catalog__basket-icon" href="#">Добавить в корзину</a>
+              <a class="catalog__basket-icon visually-hidden" href="#">Добавить в корзину</a>
           </div>
           </div>
         </section>
@@ -76,7 +76,7 @@
             <p class="catalog__specs">Диаметр 15 см, высота 10 см</p>
             <div class="catalog__order">
               <p class="catalog__price">690 руб.</p>
-              <a class="catalog__basket-icon" href="#">Добавить в корзину</a>
+              <a class="catalog__basket-icon visually-hidden" href="#">Добавить в корзину</a>
             </div>
           </div>
         </section>
@@ -92,7 +92,7 @@
             <p class="catalog__specs">Диаметр 30 см, высотка 30 см</p>
             <div class="catalog__order">
               <p class="catalog__price">1500 руб.</p>
-              <a class="catalog__basket-icon" href="#">Добавить в корзину</a>
+              <a class="catalog__basket-icon visually-hidden" href="#">Добавить в корзину</a>
             </div>
           </div>
         </section>
@@ -116,11 +116,11 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__logo logo hidden">
-          <a class="logo__link">
+          <a class="page-footer__logo-link">
             <img class="logo__img" src="/img/logo-mobile.svg" width="86" height="35" alt="Мишка">
           </a>
         </div>
-        <div class="page-footer__social container">
+        <div class="page-footer__social">
           <ul class="page-footer__social-list">
             <li><a class="page-footer__social-item page-footer__social-item--inst" href="#">Instagram</a></li>
             <li><a class="page-footer__social-item page-footer__social-item--fb" href="#">Facebook</a></li>
