Подогнал главную страницу Комп

--- a/source/form.html
+++ b/source/form.html
@@ -115,7 +115,7 @@
           <fieldset class="filter__fieldset filter__fieldset--single">
             <legend class="filter__legend filter__legend--single">Тел</legend>
             <ul class="filter__input-list filter__input-list--single">
-              <li class="filter__input-item">
+              <li class="filter__input-item filter__input-item--single">
                 <input class="filter__field"  type="text" name="phone" id="write-phone" placeholder="+7 XXX XX XX*" required>
               </li>
           </ul>
@@ -124,7 +124,7 @@
           <fieldset class="filter__fieldset filter__fieldset--single">
             <legend class="filter__legend filter__legend--single">E-mail</legend>
             <ul class="filter__input-list filter__input-list--single">
-              <li class="filter__input-item">
+              <li class="filter__input-item filter__input-item--single">
                 <input class="filter__field"  type="email" name="email" id="write-email" placeholder="Ваш Email*" required>
               </li>
             </ul>
