Подогнал страницу с формой для компа

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -91,7 +91,7 @@
             </a>
             <p class="catalog__specs">Диаметр 30 см, высотка 30 см</p>
             <div class="catalog__order">
-              <p class="catalog__price">1500 руб.</p>
+              <p class="catalog__price">1 500 руб.</p>
               <a class="catalog__basket-icon visually-hidden" href="#">Добавить в корзину</a>
             </div>
           </div>
