--- a/source/form.html
+++ b/source/form.html
@@ -27,7 +27,7 @@
           </ul>
           <ul class="main-nav__list main-nav__list--opened main-nav__list--sub-nav">
             <li class="main-nav__item">
-              <a class="main-nav__name visually-hidden" href="#">Поиск по сайту</a>
+              <a class="main-nav__name" href="#">Поиск по сайту</a>
             </li>
             <li class="main-nav__item">
               <a class="main-nav__name" href="#">Корзина: пока пуста</a>
