Доделал 5ый модуль

--- a/source/index.html
+++ b/source/index.html
@@ -99,7 +99,7 @@
               </div>
               <div class="hit-product__order">
                 <p class="hit-product__order-price">Цена: 990 руб.</p>
-                <a class="hit-product__make-order btn" href="#">Заказать</a>
+                <a class="hit-product__make-order make-order-btn btn" href="#">Заказать</a>
               </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
       </div>
     </footer>
 
-    <div class="modal container">
+    <div class="modal conteiner">
       <h1 class="modal__title">Добавить в корзину</h1>
       <h2 class="modal__sub-title">Выберите размер:</h2>
       <form class="modal__form">
@@ -220,6 +220,8 @@
         <button class="modal__add btn" type="submit" formmethod="post" formaction="https://echo.htmlacademy.ru" formtarget="_blank">Добавить</button>
       </form>
     </div>
+  <div class="modal_overlay"></div>
   <script src="js/main-nav-toggle.js"></script>
+  <script src="js/modal.js"></script>
   </body>
 </html>
