--- a/source/index.html
+++ b/source/index.html
@@ -242,6 +242,7 @@
       </form>
     </div>
   <div class="modal__overlay"></div>
+  <script src="js/picturefill.min.js"></script>
   <script src="js/main-nav-toggle.js"></script>
   <script src="js/modal.js"></script>
   </body>
