--- a/source/catalog.html
+++ b/source/catalog.html
@@ -63,7 +63,7 @@
         <h1 class="page-main__title">Каталог товаров</h1>
         <div class="catalog container">
           <section class="catalog__item">
-            <a class="catalog__link-wrapper" href="#">
+            <a class="catalog__link-wrapper" href="catalog__item.html">
               <picture>
                 <source class="catalog__img" type="image/webp" media="(min-width: 1150px)" srcset="img/photo-hare-desktop@1x.webp 1x, img/photo-hare-desktop@2x.webp 2x">
                 <source class="catalog__img" type="image/webp" media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.webp 1x, img/photo-hare-tablet@2x.webp 2x">
@@ -74,21 +74,21 @@
               </picture>
             </a>
             <div class="catalog__description">
-              <a class="catalog__title" href="#">
+              <a class="catalog__title" href="catalog__item.html">
                 <h2 class="catalog__title-name">Зайчик-попрыгайчик</h2>
               </a>
               <p class="catalog__specs">Рост 30 см, вес 200 г</p>
               <div class="catalog__order">
                 <p class="catalog__price">1 200 руб.</p>
-                <a class="catalog__basket make-order-btn" href="#">
+                <a class="catalog__basket make-order-btn" href="make-order.html">
                   <svg class="catalog__basket-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="264.205 370.961 20.294 18.849"><path d="M283.75 378.19h-3.151l-3.407-6.814a.75.75 0 1 0-1.341.671l3.071 6.143h-9.138l3.072-6.143a.75.75 0 0 0-1.341-.671l-3.407 6.814h-3.151a.75.75 0 0 0 0 1.5h.157l.855 2.991a.737.737 0 0 0-.316.595c0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795a.745.745 0 0 0 .698-.739.738.738 0 0 0-.316-.596l.854-2.991h.157a.75.75 0 1 0-.002-1.499zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/></svg>
                   <span class="visually-hidden">Добавить в корзину</span></a>
-            </div>
+              </div>
             </div>
           </section>
 
           <section class="catalog__item">
-            <a class="catalog__link-wrapper" href="#">
+            <a class="catalog__link-wrapper" href="catalog__item.html">
               <picture>
                 <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
@@ -99,13 +99,13 @@
               </picture>
             </a>
             <div class="catalog__description">
-              <a class="catalog__title" href="#">
+              <a class="catalog__title" href="catalog__item.html">
                 <h2 class="catalog__title-name">Корзинка для белья</h2>
               </a>
               <p class="catalog__specs">Диаметр 15 см, высота 10 см</p>
               <div class="catalog__order">
                 <p class="catalog__price">690 руб.</p>
-                <a class="catalog__basket make-order-btn" href="#">
+                <a class="catalog__basket make-order-btn" href="make-order.html">
                   <svg class="catalog__basket-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="264.205 370.961 20.294 18.849"><path d="M283.75 378.19h-3.151l-3.407-6.814a.75.75 0 1 0-1.341.671l3.071 6.143h-9.138l3.072-6.143a.75.75 0 0 0-1.341-.671l-3.407 6.814h-3.151a.75.75 0 0 0 0 1.5h.157l.855 2.991a.737.737 0 0 0-.316.595c0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795a.745.745 0 0 0 .698-.739.738.738 0 0 0-.316-.596l.854-2.991h.157a.75.75 0 1 0-.002-1.499zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/></svg>
                   <span class="visually-hidden">Добавить в корзину</span></a>
               </div>
@@ -113,7 +113,7 @@
           </section>
 
           <section class="catalog__item">
-            <a class="catalog__link-wrapper" href="#">
+            <a class="catalog__link-wrapper" href="catalog__item.html">
               <picture>
                 <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-toys-desktop@1x.webp 1x, img/photo-toys-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.webp 1x, img/photo-toys-tablet@2x.webp 2x">
@@ -124,13 +124,13 @@
               </picture>
             </a>
             <div class="catalog__description">
-              <a class="catalog__title" href="#">
+              <a class="catalog__title" href="catalog__item.html">
                 <h2 class="catalog__title-name">Большая корзинка<br>для игрушек</h2>
               </a>
               <p class="catalog__specs">Диаметр 30 см, высотка 30 см</p>
               <div class="catalog__order">
                 <p class="catalog__price">1 500 руб.</p>
-                <a class="catalog__basket make-order-btn" href="#">
+                <a class="catalog__basket make-order-btn" href="make-order.html">
                   <svg class="catalog__basket-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="264.205 370.961 20.294 18.849"><path d="M283.75 378.19h-3.151l-3.407-6.814a.75.75 0 1 0-1.341.671l3.071 6.143h-9.138l3.072-6.143a.75.75 0 0 0-1.341-.671l-3.407 6.814h-3.151a.75.75 0 0 0 0 1.5h.157l.855 2.991a.737.737 0 0 0-.316.595c0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795a.745.745 0 0 0 .698-.739.738.738 0 0 0-.316-.596l.854-2.991h.157a.75.75 0 1 0-.002-1.499zm-4.181 10.121h-10.433l-1.224-4.284h12.881l-1.224 4.284zm1.653-5.785h-13.739l-.81-2.836h15.359l-.81 2.836z"/></svg>
                   <span class="visually-hidden">Добавить в корзину</span></a>
               </div>
@@ -144,16 +144,16 @@
             <div class="work-process__img-video">
               <div class="work-process__img">
                 <picture>
-                  <source type="image/webp" media="(min-width: 1150px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
+                  <source class="work-process__video-img" type="image/webp" media="(min-width: 1150px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
+                  <source class="work-process__video-img" type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
+                  <source class="work-process__video-img" type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
                   <source class="work-process__video-img" media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
                   <source class="work-process__video-img" media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
                   <img class="work-process__video-img" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" width="260" height="150" alt="Процесс производства">
                 </picture>
               </div>
               <div class="work-process__video">
-                <video class="work-process__video-link" src="#" width="260" height="150"></video>
+                <video class="work-process__video-link" src="#"></video>
               </div>
             </div>
             <p class="work-process__text">
